# benchmark_detect

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  dvc.yaml  environment.yml  modelo_scinet.docx  params.yaml  pyproject.toml  requirements-gpu.txt  yolox_testdev_2017.json
configs/anomaly/: cutpaste.yaml  padim.yaml  patchcore.yaml
configs/data/: base.yaml  splits.yaml
configs/detector/: fasterrcnn.yaml  rtdetr.yaml  yolo.yaml  yolox.yaml
configs/experiment/: anom_baseline.yaml  anom_benchmark_fair_v1.yaml  det_baseline.yaml  det_benchmark_fair_v1.yaml
data/splits/: splits.json
docs/: dataset.md  dataset_current_state.md  decisions.md  experiment_plan.md  protocol_anomaly.md  protocol_anomaly_benchmark_fair_v1.md  protocol_anomaly_visual_explanations.md  protocol_detection.md  protocol_detection_benchmark_fair_v1.md  protocol_split_v1.md
reports/: benchmark_v1.md
reports/tables/: dataset_summary.csv  (+1 more)
scripts/: accept_synthetic_records.py  crop_rois.py  evaluate_pipeline.py  import_roboflow_masks.py  infer_detector.py  init_synthetic_anomaly_pack.py  inspect_dataset.py  make_splits.py  materialize_synthetic_shortlist.py  prepare_dataset.py  prepare_synthetic_source_crops.py  render_anomaly_heatmaps.py  render_cutpaste_visual_explanations.py  render_synthetic_mask_overlays.py  run_anomaly_benchmark.py  run_detection_benchmark.py  sync_synthetic_records.py  train_anomaly.py  train_detector.py
tests/: test_anomaly_benchmark.py  test_crops.py  test_detection_benchmark.py  test_load.py  test_metrics.py  test_splits.py  test_synthetic.py
(+83 files in other folders)
